🧱♻️✨ Improve Pf2e attack template and rendering
- 🧱 Allow defining inline templates for QuteUtil classes. This allows
  qute data objects to use the defined temlpate for rendering, while
  also allowing template authors to use the rich data present within the
  qute object.
- ♻️ Make QuteInlineAttack a QuteUtil to better reflect the actual data
  mapping. An attack should never really be its own note, so it
  shouldn't be a QuteBase. This also makes it easier to use inline in
  other places.
- 🧱 Allow QuteInlineAttack to be self-renderable. This means that when
  used directly, it provides a rendered string from using its template.
  This is useful for having a consistent representation that uses the
  template, while also allowing template authors to access the internal
  data of the object.
- ♻️ Distinguish between regular effects (e.g. "grab") and the long
  multiline effect
- ✨ Add in fields which previously weren't exposed to Qute, so that
  template authors can choose to use them for styling etc
- ✨ Make the default template use a non-admonition format for attacks
  when there isn't a multiline effect
- ✨ Add a prefixSpace template helper function which prefixes the
  previous object with a space if it's non-null and non-empty
- ♻️ Move AttackField to Pf2eTypeReader.Pf2eAttack for consistency with
  other JsonNodeReaders
- ♻️ Remove unused attack building functionality from
  QuteHazard.buildActions. The action field can never actually hold an
  attack, and only ever holds abilities and afflictions. There's a
  separate attacks field which holds attacks, but isn't currently read
  anywhere.