@@ -1,43 +1,33 @@
 package dev.ebullient.convert.tools.pf2e.qute;
 
 import dev.ebullient.convert.qute.ImageRef;
+import dev.ebullient.convert.qute.QuteUtil;
 import io.quarkus.qute.TemplateData;
 
+import static dev.ebullient.convert.StringUtil.join;
+
 /**
- * Pf2eTools activity attributes
- * <p>
- * This attribute will render itself as a formatted link:
- * `[textGlyph](rulesPath "glyph.title")<optional text>`
- * </p>
+ * Pf2eTools activity attributes. This attribute will render itself as a formatted link:
+ *
+ * <pre>
+ *     [textGlyph](rulesPath "glyph.title")&lt;optional text&gt;
+ * </pre>
+ *
+ * @param text The text associated with the action - may be null.
+ * @param glyph icon/image representing this activity as a {@link dev.ebullient.convert.qute.ImageRef ImageRef}
+ * @param textGlyph A textual representation of the glyph, used as the link text
+ * @param rulesPath The path which leads to an explanation of this particular activity
  */
 @TemplateData
-public class QuteDataActivity {
-    /** icon/image representing this activity as a {@link dev.ebullient.convert.qute.ImageRef ImageRef} */
-    public final ImageRef glyph;
-    public final String textGlyph;
-    public final String rulesPath;
-    final String text;
+public record QuteDataActivity(String text, ImageRef glyph, String textGlyph, String rulesPath) implements QuteUtil {
 
-    public QuteDataActivity(String text, ImageRef glyph, String textGlyph, String rulesPath) {
-        this.text = text;
-        this.glyph = glyph;
-        this.textGlyph = textGlyph;
-        this.rulesPath = rulesPath;
-    }
-
-    /** True if this is a descriptive activity (duration or condition) */
-    public boolean isVerbose() {
-        return text != null;
-    }
-
-    /** Return the text associated with the action */
-    public String getText() {
-        return text == null ? glyph.title : text;
+    /** Return the text associated with the action. */
+    @Override
+    public String text() {
+        return isPresent(text) ? text : glyph.title;
     }
 
     public String toString() {
-        return String.format("[%s](%s \"%s\")%s",
-                textGlyph, rulesPath, glyph.title,
-                isVerbose() ? " " + text : "");
+        return join(" ", "[%s](%s \"%s\")".formatted(textGlyph, rulesPath, glyph.title), text);
     }
 }
